Second try fixing text alignment issues

--- a/stylesheets/mobile.css
+++ b/stylesheets/mobile.css
@@ -12,6 +12,7 @@
 }
 
 .nav_text_holder {
+	width: 100%;
 	text-align: center;
 }
 
